# DevDocs

./: .gitignore  README.md  chats.json  main.py  pyproject.toml  rag.py
backend/: app.py  auth.py  chat_store.py  config.yaml  engine.py  eval_full.py  prompts.yaml  requirements.txt
db/: chroma.sqlite3
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  auth.js  main.jsx
frontend/src/components/: AuthPage.jsx  ChatWindow.jsx  FilePanel.jsx  Sidebar.jsx
tests/: test_basic.py  test_behavior.py  test_performance.py
