[project]
name = "devdocs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "fastembed>=0.8.0",
    "langchain>=1.2.14",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.23",
    "langchain-ollama>=0.2.0",
    "langchain-text-splitters>=1.1.1",
    "pypdf>=6.9.2",
    "streamlit>=1.56.0",
    "streamlit-chat>=0.1.1",
]

[tool.pyrefly]
# backend/ is the runtime working directory; engine.py and chat_store.py
# are resolved as siblings of app.py, not from the project root.
source_root = "backend"
